# cpp.kata

./: .gitignore  README.md  data  data.cpp  get_line  get_line_test  mem_cpy_limit_test  mem_cpy_limit_test.cpp  old.mac.donald.txt  safe_cpy_limit_test.cpp
CW-Labs/Lab04/: assign02.v1.cpp  assign02.v2.cpp  assign02.v3.cpp
Cody's Lab/Lab04_done/: explanation.md
Cody's Lab/Lab05_done/: explanation_ans_1.md  explanation_ans_2.md  homework_explanation.md
Cody's Lab/Lab06/: lab06ans1.cpp
letusc/: Makefile  first.c  justfile  tool.h
problem_statement/: w.00.Understanding.Variables.7z
problem_statement/w.00.Understanding.Variables/: w.00.Understanding.Variables.md
problem_statement/w.01.VowelsCounter/: vowelsCounter.html  vowelsCounter.md
problem_statement/w.02.countDigits/: countDigits.md
problem_statement/w.03.orderedCounter/: orderedCounter.md
problem_statement/w.04.mexicanWave/: mexicanWave.md
problem_statement/w.05.Anagram/: anagram.md
problem_statement/w.06.Point/: point.md
scratch/: CMakeLists.txt  main.cpp  safe_cpy_limit_test.cpp  xor  xor.cpp
scratch.pad/: scratch.cpp
scratch/blah/: CMakeLists.txt
scratch/blah/include/: blah.h
scratch/include/: blah.h
scratch/src/: blah.cpp
snippets_test/: bcd  bcd.c  coverage  date-test  date_time_test.cpp  fork_it.cpp  get_line.cpp  get_line_test.cpp  long.poem.txt  mem_macros.h  safe_cpy_limit  safe_cpy_limit.c  seven  seven.c  test
snippets_test/coverage/: coverage  coverage.cpp  coverage.info  makefile  short.poem.txt
solutions/w.00.Understanding.Variables/: 010.cpp
solutions/w.01.VowelsCounter/: 010.cpp  (+2 more)
(+86 files in other folders)
