cmake_minimum_required(VERSION 3.0.0)
project(scratch VERSION 0.1.0)

include(CTest)
enable_testing()

add_executable(scratch main.cpp)
target_include_directories(scratch PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

set(CPACK_PROJECT_NAME ${PROJECT_NAME})
set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
include(CPack)
